<resources>
    <string name="app_name">Retro Calculator</string>
    <string name="backSpace">⌫</string>
    <string name="ac">AC</string>
    <string name="percentage">%</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="square_root">√</string>
</resources>