<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:background="@color/bg_top"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="horizontal"
        android:layout_gravity="end">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_history_24"
            android:background="@android:color/transparent"
            app:tint="@color/text_color_darker"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:background="@color/bg_top"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:id="@+id/calc_formula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:layout_gravity="bottom"
            android:textSize="26sp"
            android:text="HELLO"
            android:textColor="@color/text_color_darker"
            android:fontFamily="@font/digital_7_mono"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingBottom="4dp"
            android:scrollbars = "vertical"
            android:background="@color/bg_top" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:background="@color/bg_top"
        android:descendantFocusability="blocksDescendants">
        <TextView
            android:id="@+id/calc_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/digital_7_mono"
            android:gravity="center_vertical|end"
            android:layout_gravity="bottom"
            android:text="0"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbars="vertical"
            android:textColor="@color/text_color"
            android:textSize="48sp"
            android:descendantFocusability="blocksDescendants"/>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_c"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="C"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:background="@drawable/ripple_red"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/percentage"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_square_root"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/square_root"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/backSpace"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="26sp"
            android:background="@drawable/ripple_red"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_left_parenthesis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="("
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_right_parenthesis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=")"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_power"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="^"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:background="@drawable/ripple"
            android:textSize="26sp"
            android:text="7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="8"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="9"
            android:stateListAnimator="@null"
            android:layout_margin="6dp"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="6"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="2"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:background="@drawable/ripple_orange"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="00"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_decimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="."
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:background="@drawable/ripple"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equals"
            android:layout_margin="6dp"
            android:stateListAnimator="@null"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:background="@drawable/orange_ripple"/>
    </LinearLayout>



</LinearLayout>